<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <ImageView
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:id="@+id/imageView2"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginLeft="39dp"
            android:layout_marginStart="39dp"
            android:layout_marginTop="60dp"
            android:src="@drawable/directorio"/>

        <ImageView
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:id="@+id/imageView3"
            android:src="@drawable/eventos"
            android:layout_above="@+id/textView3"
            android:layout_toRightOf="@+id/textView3"
            android:layout_toEndOf="@+id/textView3"
            android:layout_marginLeft="78dp"
            android:layout_marginStart="78dp" />

        <ImageView
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:id="@+id/imageView4"
            android:layout_below="@+id/imageView2"
            android:layout_alignLeft="@+id/imageView2"
            android:layout_alignStart="@+id/imageView2"
            android:layout_marginTop="81dp"
            android:src="@drawable/noticia"/>

        <ImageView
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:id="@+id/imageView5"
            android:src="@drawable/cumpleanos"
            android:layout_alignTop="@+id/imageView4"
            android:layout_alignLeft="@+id/imageView3"
            android:layout_alignStart="@+id/imageView3" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/board_directorio"
            android:id="@+id/textView3"
            android:layout_below="@+id/imageView2"
            android:textStyle="bold"
            android:layout_alignLeft="@+id/imageView2"
            android:layout_alignStart="@+id/imageView2"
            android:textSize="22sp"
            android:paddingTop="5dp"
            android:textColor="#000000" android:shadowColor="#8a6603"
            android:shadowDx="3"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/board_eventos"
            android:id="@+id/textView5"
            android:layout_below="@+id/imageView3"
            android:textStyle="bold"
            android:layout_alignLeft="@+id/imageView3"
            android:layout_alignStart="@+id/imageView3"
            android:textSize="22sp"
            android:textColor="#000000" android:shadowColor="#8a6603"
            android:shadowDx="3"
            android:paddingTop="5dp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/board_noticias"
            android:id="@+id/textView6"
            android:textStyle="bold"
            android:layout_below="@+id/imageView4"
            android:layout_alignLeft="@+id/imageView4"
            android:layout_alignStart="@+id/imageView4"
            android:textSize="22sp"
            android:paddingTop="5dp"
            android:textColor="#000000" android:shadowColor="#8a6603"
            android:shadowDx="3"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/board_cumpleanos"
            android:id="@+id/textView7"
            android:layout_below="@+id/imageView5"
            android:textStyle="bold"
            android:layout_alignLeft="@+id/imageView5"
            android:layout_alignStart="@+id/imageView5"
            android:textSize="22sp"
            android:paddingTop="5dp"
            android:textColor="#000000" android:shadowColor="#8a6603"
            android:shadowDx="3"/>

    </RelativeLayout>

    </LinearLayout>